modalstyles.css
#metamoo-logo {
	padding-left: 20%;
	width: 60%;
}

#metamoo-warning-logo {
	width: 60%;
}

#metamoo-form {
	width: 100%;
	box-sizing: border-box;
	color: rgb(51, 51, 51);
	display: block;
	font-family: arial, verdana, tahoma;
	font-size: 14px;
	height: 185px;
	line-height: 20px;
	margin-bottom: 50px;
	margin-left: 15px;
	margin-right: 0px;
	margin-top: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
	padding-right: 0px;
	padding-top: 0px;
	width: 275px;
}

#metamoo-form-group {
	box-sizing: border-box;
	color: rgb(51, 51, 51);
	display: block;
	font-family: arial, verdana, tahoma;
	font-size: 14px;
	line-height: 20px;
	margin-bottom: 15px;
	margin-left: 0px;
	margin-right: 0px;
	margin-top: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
	padding-right: 0px;
	padding-top: 0px;
	width: 275px;
}

#metamoo-form-label {
	box-sizing: border-box;
	color: rgb(51, 51, 51);
	cursor: default;
	display: inline-block;
	font-family: arial, verdana, tahoma;
	font-size: 14px;
	font-weight: bold;
	height: 20px;
	line-height: 20px;
	margin-bottom: 5px;
	margin-left: 0px;
	margin-right: 0px;
	margin-top: 0px;
	max-width: 100%;
	padding-bottom: 0px;
	padding-left: 0px;
	padding-right: 0px;
	padding-top: 0px;
	width: 25px;
}

#metamoo-form-control {
	-webkit-appearance: none;
	-webkit-box-shadow: rgba(0, 0, 0, 0.0745098) 0px 1px 1px 0px inset;
	-webkit-rtl-ordering: logical;
	-webkit-transition-delay: 0s, 0s;
	-webkit-transition-duration: 0.15s, 0.15s;
	-webkit-transition-property: border-color, box-shadow;
	-webkit-transition-timing-function: ease-in-out, ease-in-out;
	-webkit-user-select: text;
	-webkit-writing-mode: horizontal-tb;
	background-color: rgb(255, 255, 255);
	background-image: none;
	border-bottom-color: rgb(204, 204, 204);
	border-bottom-left-radius: 4px;
	border-bottom-right-radius: 4px;
	border-bottom-style: solid;
	border-bottom-width: 1px;
	border-image-outset: 0px;
	border-image-repeat: stretch;
	border-image-slice: 100%;
	border-image-source: none;
	border-image-width: 1;
	border-left-color: rgb(204, 204, 204);
	border-left-style: solid;
	border-left-width: 1px;
	border-right-color: rgb(204, 204, 204);
	border-right-style: solid;
	border-right-width: 1px;
	border-top-color: rgb(204, 204, 204);
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
	border-top-style: solid;
	border-top-width: 1px;
	box-shadow: rgba(0, 0, 0, 0.0745098) 0px 1px 1px 0px inset;
	box-sizing: border-box;
	color: rgb(85, 85, 85);
	cursor: auto;
	display: block;
	font-family: arial, verdana, tahoma;
	font-size: 14px;
	font-style: normal;
	font-variant: normal;
	font-weight: normal;
	height: 34px;
	letter-spacing: normal;
	line-height: 20px;
	margin-bottom: 0px;
	margin-left: 0px;
	margin-right: 0px;
	margin-top: 0px;
	padding-bottom: 6px;
	padding-left: 12px;
	padding-right: 12px;
	padding-top: 6px;
	text-align: start;
	text-indent: 0px;
	text-shadow: none;
	text-transform: none;
	transition-delay: 0s, 0s;
	transition-duration: 0.15s, 0.15s;
	transition-property: border-color, box-shadow;
	transition-timing-function: ease-in-out, ease-in-out;
	width: 275px;
	word-spacing: 0px;
	writing-mode: lr-tb;
}

#metamoo-form-btn {
	-webkit-appearance: none;
	-webkit-user-select: none;
	-webkit-writing-mode: horizontal-tb;
	align-items: flex-start;
	background-color: rgb(240, 173, 78);
	background-image: none;
	border-bottom-color: rgb(238, 162, 54);
	border-bottom-left-radius: 4px;
	border-bottom-right-radius: 4px;
	border-bottom-style: solid;
	border-bottom-width: 1px;
	border-image-outset: 0px;
	border-image-repeat: stretch;
	border-image-slice: 100%;
	border-image-source: none;
	border-image-width: 1;
	border-left-color: rgb(238, 162, 54);
	border-left-style: solid;
	border-left-width: 1px;
	border-right-color: rgb(238, 162, 54);
	border-right-style: solid;
	border-right-width: 1px;
	border-top-color: rgb(238, 162, 54);
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
	border-top-style: solid;
	border-top-width: 1px;
	box-sizing: border-box;
	color: rgb(255, 255, 255);
	cursor: pointer;
	display: inline-block;
	font-family: arial, verdana, tahoma;
	font-size: 14px;
	font-style: normal;
	font-variant: normal;
	font-weight: normal;
	height: 34px;
	letter-spacing: normal;
	line-height: 20px;
	margin-bottom: 0px;
	margin-left: 15%;
	margin-right: 0px;
	margin-top: 0px;
	overflow-x: visible;
	overflow-y: visible;
	padding-bottom: 6px;
	padding-left: 12px;
	padding-right: 12px;
	padding-top: 6px;
	text-align: center;
	text-indent: 0px;
	text-shadow: none;
	text-transform: none;
	vertical-align: middle;
	white-space: nowrap;
	width: 69px;
	word-spacing: 0px;
	writing-mode: lr-tb;
}

#metamoo-note {
	box-sizing: border-box;
	color: rgb(51, 51, 51);
	display: block;
	font-family: arial, verdana, tahoma;
	font-size: 14px;
	line-height: 20px;
	margin-bottom: 15px;
	margin-left: 0px;
	margin-right: 0px;
	margin-top: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
	padding-right: 0px;
	padding-top: 0px;
	width: 275px;
	height: 80px;
}

#metamoo-form-group-note {
	box-sizing: border-box;
	color: rgb(51, 51, 51);
	display: block;
	font-family: arial, verdana, tahoma;
	font-size: 14px;
	line-height: 20px;
	margin-bottom: 15px;
	margin-left: 0px;
	margin-right: 0px;
	margin-top: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
	padding-right: 0px;
	padding-top: 0px;
	width: 275px;
	margin-bottom: 15px;
}

#metamoo-warning-text {
	font-size: .8em;
	text-align: center;
}

#metamoo-login-warning {
	text-align: center;
	padding: 2%;
}

#metamoo-login-text {
	font-family: arial, verdana, tahoma;
	font-size: 14px;
}

#metamoo-login-link{
	font-family: arial, verdana, tahoma;
	font-size: 14px;
	color: #428bca;
}

#metamoo-warning-paragraph {
	padding-bottom: 10%;
	font-family: arial, verdana, tahoma;
	font-size: 14px;
	font-weight: bold;
}

#metamoo-simplemodal-container {
	background-color:"#fff";
	border-color:"#676767";
	border-width: 1px;
	height:"43%"; 
	padding:"1%"; 
	width:"40%";
	right: "50px";
	top: "50px";
	text-align: initial;
}

